[package]
name = "bevy_mod_picking"
version = "0.2.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A 3D mouse picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "graphics", "picking", "bevy", "3d"]
categories = ["game-engines", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "4fecb899aaa33cf2ebc42ac94a32d4b5336c6e93", default-features = false, features = ["render"] }
