[package]
name = "bevy_mod_picking"
version = "0.2.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A 3D mouse picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "graphics", "picking", "bevy", "3d"]
categories = ["game-engines", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "2e2423139e0cd8efda3aa0d474d3eb231dad566b", default-features = false, features = ["render"] }
